# bhasaai-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  answerkey.typ  debug_lesson_plan.py  docker-compose.yml  export_openapi.py  features.md  pyproject.toml  verify_all_flows.py  verify_features.py
alembic/: env.py
alembic/versions/: 3d322eebe3ca_add_paper_checking.py  5bce6e98128d_add_flashcard_models_final.py  5c4957ae1653_initial_core_tables.py  6b5032d176f6_add_paper_checking.py  82d16b29c982_add_teaching_tools.py  89ada99de96b_add_learning_module.py  a5ef8569e97a_add_teaching_tools.py  c3b9aec2ff24_add_documents_and_question_papers.py  ca9e4bfd7d86_add_worksheet_models.py  d8b378484d56_add_checked_papers_table.py  e1aed1bb138b_add_dictionary_tables.py  ef21326aef10_add_assignments.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  exceptions.py  middleware.py  security.py  storage.py
app/db/: __init__.py  base.py  init_db.py  session.py
docs/: ASSIGNMENT_SERVICE.md  AUTH_SERVICE.md  DICTIONARY_SERVICE.md  DOCUMENT_SERVICE.md  LEARNING_SERVICE.md  PAPER_CHECKING_SERVICE.md  QUESTION_PAPER_SERVICE.md  TEACHING_TOOLS_SERVICE.md  WORKSHEET_SERVICE.md
openapi/: openapi.yaml  swagger.json
scripts/: test_pdf_debug.py
tests/: __init__.py  conftest.py  test_assignment_flow.py  test_assignments.py  test_auth.py  test_dictionary.py  test_health.py  test_learning.py  test_paper_checking.py  test_pdf_service.py  test_question_papers.py  test_teaching_tools.py  test_worksheet_models.py
(+61 files in other folders)
